--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Joao Lopes",
   "license": "ISC",
   "dependencies": {
-    "appium": "^2.0.1"
+    "appium": "^2.0.1",
+    "appium-doctor": "^1.16.2"
   },
   "devDependencies": {
     "appium-uiautomator2-driver": "^2.34.1"
